# airflow-simulation

./: .gitignore  Cargo.toml  README.md  sample-model.json
airflow-simulator/: Cargo.toml
airflow-simulator/src/: img.rs  main.rs  sim.rs
data/: README.md
experiments/: README.md  asymmetric.py  base.py  constricted-flow.py  constriction-stats.py  degrade-and-return.py  differ-start.py  matched-recovery.py  runner.py  steady-healthy.py
models/: sample.json  simple.json
paper/: .gitignore  Abstract.tex  Appendices.tex  Ch1-introduction.tex  Ch2-background.tex  Ch3-methods.tex  Ch4-results.tex  Ch5-conclusions.tex  Ch5-discussion.tex  Makefile  main.tex  ref.bib
paper/figs/: .gitignore  acinar.tikz.tex  asymmetric-diff-max.autoplot.tex  asymmetric-max-diff.autoplot.tex  asymmetric.autoplot.tex  bifurcation.tikz.tex  constricted-flow-characteristics.autoplot.tex  constricted-flow-characteristics.pgfplot  constricted-flow-stats-acceleration.autoplot.tex  constricted-flow-stats-acceleration.pgfplot  constricted-flow-stats-maxflow.autoplot.tex  constricted-flow-stats-maxflow.pgfplot  initial-volumes-level-out.autoplot.tex  initial-volumes-level-out.pgfplot  initial-volumes-too-constricted.autoplot.tex  initial-volumes-too-constricted.pgfplot  interpolation-functions.pgfplot  interpolation-functions.tex  mkplot.py  recovery-constricted.autoplot.tex  recovery-healthy.autoplot.tex  recovery-matched.autoplot.tex  recovery.autoplot.tex  sharp-recovery.autoplot.tex  (+3 more)
src/: branch_id.rs  cli.rs  float.rs  img.rs  main.rs  point.rs  sim.rs  tree.rs  vec_utils.rs
(+9 files in other folders)
