[package]
name = "airflow-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.6"
clap = "2.33.3"
image = { version = "0.23", default-features = false, features = ["png"] }
imageproc = "0.22.0"
rand = "0.7"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"
sparse21 = "0.2.1"

[features]
